--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "drizzle-orm": "0.38.2",
+    "hono": "^4.6.14",
     "lucide-react": "0.469.0",
     "motion": "11.15.0",
     "next": "15.1.2",
